--- a/src/app/pullRequests/pullRequests.component.scss
+++ b/src/app/pullRequests/pullRequests.component.scss
@@ -1,13 +1,3 @@
-.hide {
-    display: none;
-}
-.show {
-    display: block;
-}
-
-h1 {
-    margin-bottom: 50px;
-}
 ul {
     list-style-type: none;
     margin: 0px 0px 40px 0px;
@@ -35,6 +25,7 @@ ul {
                 font-size: 15px;
                 margin: 10px 10px 10px 10px;
                 cursor: default;
+                font-weight: inherit;
             }
 
             img {
@@ -51,6 +42,7 @@ ul {
     display: inline-block;
     margin-left: 5%;
     margin-right: 5%;
+    margin-bottom: 40px;
 }
 .panel-rejected>.panel-heading {
     background-color: red;
@@ -83,7 +75,6 @@ ul {
     text-align: center;
     padding: 20px 0px 20px 0px;
     font-size: 40px;
-    width: 180px;
 }
 .panel-opened {
     float:left;
