--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,12 @@ body {
     font-size: 18px;
 }
 
+h1 {
+    margin: 20px 0px 50px 20px;
+    font-weight: normal;
+    font-size: 25px;
+}
+
 a {
     text-decoration: none;
 }
@@ -18,7 +24,7 @@ a {
     width: 80%;
     margin: 0 auto;
     padding: 1.3em;
-    display: grid;
+    display: -webkit-box;
     grid-template-columns: 30% auto;
 
     a {
@@ -35,7 +41,7 @@ section {
 button {
     border: none;
     font-family: inherit;
-    background-color: rgb(238, 238, 238);
+    background-color: inherit;
     cursor: pointer;
 }
 
