--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,6 @@
 <header>
     <div class="container">
+      <img src="../favicon.ico">
       <a routerLink="/" class="logo">{{ appTitle }}</a>
       <nav>
         <ul>
