--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -5,6 +5,12 @@ header {
         font-size: 30px;
     }
 
+    img {
+        width: 40px;
+        float: left;
+        display: block;
+    }
+
     nav {
         justify-self: right;
     
