--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ a {
     width: 80%;
     margin: 0 auto;
     padding: 1.3em;
-    display: -webkit-box;
+    display: flex;
     grid-template-columns: 30% auto;
 
     a {
