--- a/src/app/pullRequestsByRepo/pullRequestsByRepo.component.html
+++ b/src/app/pullRequestsByRepo/pullRequestsByRepo.component.html
@@ -4,7 +4,7 @@
   <div class="panel-group">
     <div class="panel panel-opened">
       <div class="panel-heading">Abertos</div>
-      <div class="panel-body">2</div>
+      <div class="panel-body">{{ openedPRs }}</div>
     </div>
 
     <div class="panel panel-rejected">
